--- a/.gitignore
+++ b/.gitignore
@@ -29,12 +29,15 @@ Game/*.tdb
 [Dd]ebugPublic/
 [Rr]elease/
 [Rr]eleases/
+[Ss]team[Dd]ebug/
+[Ss]team[Rr]elease/
 x64/
 x86/
 build/
 bld/
 [Bb]in/
 [Oo]bj/
+*.tlog
 
 # Roslyn cache directories
 *.ide/
