--- a/Transcendence/Transcendence.vcxproj
+++ b/Transcendence/Transcendence.vcxproj
@@ -204,7 +204,7 @@
     <ClCompile>
       <Optimization>Disabled</Optimization>
       <AdditionalIncludeDirectories>..\..\Mammoth\Include;..\..\Alchemy\Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>STEAM_BUILD;WIN32;_DEBUG;_WINDOWS;DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ExceptionHandling>Async</ExceptionHandling>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <RuntimeTypeInfo>true</RuntimeTypeInfo>
@@ -609,6 +609,8 @@
     <ClInclude Include="Transcendence.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\..\SteamBuild\ContentBuilder\scripts\app_build_1000.vdf" />
+    <None Include="..\..\..\SteamBuild\ContentBuilder\scripts\depot_build_1001.vdf" />
     <None Include="..\Game\Readme.htm">
       <DeploymentContent>true</DeploymentContent>
     </None>
@@ -650,6 +652,9 @@
     </ProjectReference>
     <ProjectReference Include="..\..\Alchemy\XMLUtil\XMLUtil.vcxproj">
       <Project>{482b1658-7f28-4e62-94b6-ed71259c5f44}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Mammoth\SteamUtil\SteamUtil.vcxproj">
+      <Project>{8facc902-e3c3-4b91-af06-1e74be8bb4e5}</Project>
     </ProjectReference>
     <ProjectReference Include="..\..\Mammoth\TSE\TSE.vcxproj">
       <Project>{797712ea-a2b5-4e30-a2f9-5998e90afecc}</Project>
